src/objects/unitAllocation__c.object
<CustomObject>
    <description>Contains the subtracts in a unit and the associated percent allocation for each subtract</description>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>allocationFactorComputed__c</fullName>
        <description>Unless Allocation Factor Override is set: When Subtract Gross Acres less than unit gross acres: Subtract Gross Acres / Unit Gross Acres. Otherwise, 1</description>
        <formula>IF(   allocationFactorOverride__c = 0,
If(subtractGrossAcres__c &lt;= unitGrossAcres__c,subtractGrossAcres__c/ unitGrossAcres__c,unitGrossAcres__c/unitGrossAcres__c) ,
allocationFactorOverride__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unless Allocation Factor Override is set: When Subtract Gross Acres less than unit gross acres: Subtract Gross Acres / Unit Gross Acres. Otherwise, 1</inlineHelpText>
        <label>Allocation Factor Computed</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>allocationFactorOverride__c</fullName>
        <description>Allocation Factor, if known</description>
        <inlineHelpText>Allocation Factor, if known</inlineHelpText>
        <label>Allocation Factor Override</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>allocationPercentage__c</fullName>
        <label>% of Subtract Gross Acres in Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>instrumentRoyaltyType__c</fullName>
        <formula>TEXT(subtract__r.Instrument__r.Royalty_Type__c)</formula>
        <label>Royalty Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>instrumentRoyalty__c</fullName>
        <formula>subtract__r.Instrument__r.Lease_Royalty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Royalty</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subtractGrossAcres__c</fullName>
        <description>Calculated subtract gross acres based on subtract unit allocation percentage</description>
        <formula>/*subtract__r.Subtract_Gross_Acres__c * (allocationPercentage__c / 100) - original formula, modifying per discussion with Andrew Kock 03-31-2020 jdg*/
subtract__r.Subtract_Gross_Acres__c/* * allocationPercentage__c*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated subtract gross acres based on subtract unit allocation percentage</inlineHelpText>
        <label>Tract - Gross Acres</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtractLink__c</fullName>
        <formula>subtract__r.link__c</formula>
        <label>Subtract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subtractMineralInterest__c</fullName>
        <formula>subtract__r.Mineral_Interest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract Mineral Interest</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtractNMAComputed__c</fullName>
        <formula>subtract__r.NMA_Computed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMA Computed</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtractNRAComputed__c</fullName>
        <formula>subtract__r.NRA_Computed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRA Computed</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtractNRAFactor__c</fullName>
        <formula>subtract__r.NRA_Conversion_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRA Factor</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtractNRI__c</fullName>
        <formula>subtract__r.Subtract_NRI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract net Revenue Interest</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtractName__c</fullName>
        <formula>subtract__r.Name</formula>
        <label>Subtract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subtractNetAcres__c</fullName>
        <formula>subtract__r.Subtract_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract - Net Acres</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subtract</label>
        <referenceTo>Subtract__c</referenceTo>
        <relationshipName>subtractUnitAllocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tractAccountLink__c</fullName>
        <formula>subtract__r.Tract__r.Account__r.link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractAccountName__c</fullName>
        <formula>subtract__r.Tract__r.Account__r.Name</formula>
        <label>Tract Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractLink__c</fullName>
        <formula>subtract__r.Tract__r.link__c</formula>
        <label>Tract Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tractName__c</fullName>
        <formula>subtract__r.Tract__r.Name</formula>
        <label>Tract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uaNRI__c</fullName>
        <formula>uaSubtractNRI__c *  uaSubtractGrossAcresPercentUnitGrossAcre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit NRI SRP Calculation</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uaSubtractAcresUnit__c</fullName>
        <formula>TEXT(subtract__r.Tract__r.netAcreageUnits__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acres Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uaSubtractGrossAcresPercentUnitGrossAcre__c</fullName>
        <formula>uaSubtractGrossAcres__c / unitGrossAcres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract Gross Acres as % of Unit Gross</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uaSubtractGrossAcres__c</fullName>
        <formula>/*subtract__r.Subtract_Gross_Acres__c * (allocationPercentage__c / 100) - original formula, modifying per discussion with Andrew Kock 03-31-2020 jdg*/
subtract__r.Subtract_Gross_Acres__c * allocationPercentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract - Gross Acres in Unit</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uaSubtractMineralInterest__c</fullName>
        <formula>uaSubtractNMA__c/uaSubtractGrossAcres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Int for Tract Acreage in Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uaSubtractNMA__c</fullName>
        <formula>subtract__r.NMA_Computed__c*allocationPercentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract - NMA in the Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uaSubtractNRA__c</fullName>
        <formula>uaSubtractNMA__c * subtract__r.NRA_Conversion_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tract - NRA in the Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uaSubtractNRI__c</fullName>
        <formula>uaSubtractMineralInterest__c * subtract__r.Instrument_Lease_Royalty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRI for Tract Acreage in Unit</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitGISUnitName__c</fullName>
        <formula>unit__r.GIS_Unit_Name__c</formula>
        <label>Unit GIS Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitGrossAcres__c</fullName>
        <description>Unit gross acres estimate unless unit gross acres actual is populated.</description>
        <formula>unit__r.Gross_Acres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit gross acres estimate unless unit gross acres actual is populated.</inlineHelpText>
        <label>Unit Gross Acres</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitLink__c</fullName>
        <formula>unit__r.link__c</formula>
        <label>Unit Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitNRI__c</fullName>
        <description>Subtract NRI * Allocation factor computed</description>
        <formula>subtract__r.Subtract_NRI__c * allocationFactorComputed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subtract NRI * Allocation factor computed</inlineHelpText>
        <label>Unit NRI</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitName__c</fullName>
        <formula>unit__r.Name</formula>
        <label>Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitType__c</fullName>
        <formula>TEXT(unit__r.Unit_Type__c)</formula>
        <label>Unit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipName>subtractUnitAllocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Unit Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>subtract__c</columns>
        <columns>unit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UA-{00000000}</displayFormat>
        <label>Unit Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>